opam-version: "2.0"
name: "mugen"
synopsis: "Universe levels and universe polymorphism"
description: """
This package implements the generalization of Conor McBride’s crude but effective stratification. The theory behind the design is discussed in the POPL 2023 paper “An Order-Theoretic Analysis of Universe Polymorphism.”
"""
maintainer: "favonia <favonia@gmail.com>"
authors: "The RedPRL Development Team"
license: "Apache-2.0"
homepage: "https://github.com/RedPRL/mugen"
bug-reports: "https://github.com/RedPRL/mugen/issues"
dev-repo: "git+https://github.com/RedPRL/mugen.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.13"}
  "bwd" {>= "2.1" & with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
